# voice

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native_audio.cpp
app/src/main/java/com/example/voicechanger/: AudioEngine.kt  FloatingWidgetService.kt  MainActivity.kt  MediaRecorderHelper.kt  NativeAudio.kt  VoiceService.kt
app/src/main/res/layout/: activity_main.xml  floating_widget.xml
